Finished design of first screen

--- a/App/student_services_app/android/app/src/main/AndroidManifest.xml
+++ b/App/student_services_app/android/app/src/main/AndroidManifest.xml
@@ -22,8 +22,8 @@
                  there is no splash screen (such as the default splash screen
                  defined in @style/LaunchTheme). -->
             <meta-data
-                android:name="io.flutter.app.android.SplashScreenUntilFirstFrame"
-                android:value="true" />
+                android:name="com.google.android.geo.API_KEY"
+                android:value="YOUR_API_KEY" />
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
