--- a/App/student_services_app/pubspec.yaml
+++ b/App/student_services_app/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  google_maps_flutter: ^0.5.21+3
 
 dev_dependencies:
   flutter_test:
@@ -41,7 +42,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - lib/assets/profile.png
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
 
